--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "https://www.linkedin.com/pub/caitlin-kuhlman/86/895/b01"
+  linkedin         : "caitlinkuhlman"
   orcid            : 
   pinterest        :
   soundcloud       :
